--- a/exercises/1.1/index.html
+++ b/exercises/1.1/index.html
@@ -1084,57 +1084,69 @@
 <img alt="" src="media/image2.png" />
 <img alt="" src="media/image0.png" />
 <img alt="" src="media/image3.png" /></p>
+<p>Burp Overview</p>
 <ol>
 <li>
-<p>Burp Overview</p>
-</li>
-<li>
 <p>Start <strong>Burp</strong> by clicking on the icon on the left.</p>
-<p><img alt="" src="media/image4.png" /></p>
+<p><img alt="" class="zoom" src="media/img-1614924823-20210305.png" /></p>
 </li>
 <li>
-<p>Burp Icon</p>
-<div class="admonition danger">
-<p class="admonition-title"><em>DO NOT INSTALL ANY UPDATES!</em></p>
-<p>The Burp Community Edition only allows for temporary projects. Click "Next" on the Welcome screen.</p>
-</div>
-<p><img alt="" src="media/image5.png" /></p>
+<p>Accept License</p>
+<p>Click on "I  Accept" on the Terms and Conditions prompt.</p>
 </li>
+</ol>
+<p><img alt="" class="zoom" src="media/img-1614924347-20210305.png" /></p>
+<div class="codehilite"><pre><span></span><code>!!! danger &quot;*DO NOT INSTALL ANY UPDATES!*&quot;
+    The Burp Community Edition only allows for temporary projects. Click &quot;Next&quot; on the Welcome screen.
+
+![](media/img-1615005372-20210305.png){: class=&quot;zoom&quot; }
+</code></pre></div>
+
+<blockquote>
+<blockquote>
+<blockquote>
+<blockquote>
+<blockquote>
+<blockquote>
+<blockquote>
+<blockquote>
+<blockquote>
+<blockquote></blockquote>
+</blockquote>
+</blockquote>
+</blockquote>
+</blockquote>
+</blockquote>
+</blockquote>
+</blockquote>
+</blockquote>
+</blockquote>
+<ol>
 <li>
-<p>Burp Welcome Screen</p>
 <p>Next, select and load the prepared configuration file "sec522.json".</p>
 <p><img alt="" src="media/image6.png" /></p>
-</li>
-<li>
-<p>Load Configuration</p>
 <p>Eventually, you will see the main Burp window.</p>
-<p><img alt="" src="media/image7.png" /></p>
+<p><img alt="" class="zoom" src="media/img-1615005632-20210305.png" /></p>
 <p><strong>Main Burp Window</strong></p>
 </li>
 <li>
 <p>For now, we disable interception via Burp. Instead, we would like to have Burp record requests and responses without holding them. Select the "Proxy" tab and make sure the "Intercept" button states "Intercept is off". Click the button to toggle it from "on" to "off".</p>
-<p><img alt="" src="media/image8.png" /></p>
-</li>
-<li>
-<p>Disable Intercept in Burp</p>
+<p><img alt="" class="zoom" src="media/img-1615005851-20210305.png" /></p>
 </li>
 <li>
 <p>Start the <strong>Chrome</strong> web browser by clicking the Chrome icon on the left.</p>
 <p><img alt="" src="media/image9.png" /></p>
 </li>
 <li>
-<p>Google Chrome Icon</p>
-</li>
-<li>
 <p>After Chrome starts, use the Proxy Switcher plugin to select Burp as a proxy. The Proxy Switcher plugin can be found in the top right corner of Chrome. The icon is gray to indicate that no proxy is selected, and Chrome connects directly. Once you select a proxy, the icon will be red. Click on the icon to open the settings. Select "Manual Proxy" to activate the proxy. "Burp" should be the active selection in the "Profile" dropdown.</p>
-<p><img alt="" src="media/image10.png" /></p>
+<p><img alt="" class="zoom" src="media/img-1615006477-20210305.png" /></p>
 </li>
 <li>
 <p>Proxy Switcher Configuration</p>
 <p>If you wish to turn off interception later, just select "Direct" from the Proxy Switcher dialog.</p>
 </li>
 <li>
-<p>In Chrome, browse to <a href="http://www.sec522.org/ex1/0/index.php">http://www.sec522.org/ex1/0/index.php</a></p>
+<p>In Chrome, browse to <a href="http://lab-1.1.sans.labs/">http://lab-1.1.sans.labs/</a></p>
 </li>
 <li>
 <p>This page is able to verify your configuration. Click on "Check if Burp is Running".</p>
