--- a/exercises/2.1/index.html
+++ b/exercises/2.1/index.html
@@ -1013,7 +1013,7 @@
 <hr />
 <h2 id="part-2-phpbb-sql-injection">Part 2: phpBB SQL Injection</h2>
 <h3 id="no-hints_1">No Hints</h3>
-<p>The old version of phpBB we have installed here suffers from multiple SQL injection flaws. In this exercise, we explore an SQL injection flaw in the messaging interface. To trigger the flaw, log in at <a href="http://www.sec522.org/phpBB2">http://www.sec522.org/phpBB2</a> (username: sec522, password: training) and then use one of the hints to get you started (<a href="http://www.sec522.org/phpBB2/hints.html">http://www.sec522.org/phpBB2/hints.html</a>). The injection will only work if you are logged in. You may also want to explore the login form for additional opportunities to experiment with SQL injection.</p>
+<p>The old version of phpBB we have installed here suffers from multiple SQL injection flaws. In this exercise, we explore an SQL injection flaw in the messaging interface. To trigger the flaw, log in at <a href="http://lab-2.2phpbb.sans.labs">http://lab-2.2phpbb.sans.labs</a> (username: sec522, password: training) and then use one of the hints to get you started (<a href="http://lab-2.2phpbb.sans.labs">http://lab-2.2phpbb.sans.labs</a>). The injection will only work if you are logged in. You may also want to explore the login form for additional opportunities to experiment with SQL injection.</p>
 <h3 id="step-by-step_1">Step by Step</h3>
 <p>We have a URL at hand that we know is vulnerable to SQL injection. The first step to test for SQL injection is to insert a quote into each field.</p>
 <p>The following steps will inspect a parameter used in the phpBB private messaging system.</p>
