--- a/exercises/3.3/index.html
+++ b/exercises/3.3/index.html
@@ -956,11 +956,11 @@
 <hr />
 <h2 id="part-1-access-control">Part 1: Access Control</h2>
 <h3 id="no-hints">No Hints</h3>
-<p>Open <a href="http://www.sec522.org/accesscontrol">http://www.sec522.org/accesscontrol</a> in a browser. Feel free to explore on your own at this point. An administrator is able to adjust the status of an animal in the shelter (for example, flip the "Cat Aggressive" status) by clicking on the respective icon in the page describing an individual animal. Try to perform this action as a normal user.</p>
+<p>Open <a href="http://lab-3.3.sans.labs/index.php">http://lab-3.3.sans.labs/index.php</a> in a browser. Feel free to explore on your own at this point. An administrator is able to adjust the status of an animal in the shelter (for example, flip the "Cat Aggressive" status) by clicking on the respective icon in the page describing an individual animal. Try to perform this action as a normal user. Admin username/pass is sec522/training and regular user is hackercat/training</p>
 <h3 id="step-by-step">Step by Step</h3>
 <ol>
 <li>
-<p>Open <a href="http://www.sec522.org/accesscontrol">http://www.sec522.org/accesscontrol</a> in Chrome.</p>
+<p>Open <a href="http://lab-3.3.sans.labs/index.php">http://lab-3.3.sans.labs/index.php</a> in Chrome.</p>
 </li>
 <li>
 <p>Click the "Start Exercise" button. This will direct you to our animal shelter login page.</p>
