--- a/exercises/1.4/index.html
+++ b/exercises/1.4/index.html
@@ -893,10 +893,10 @@
 <p><a href="http://169.254.169.254/latest/meta-data/iam/security-credentials/cg-ec2-role-cgidmxg5qsmw9b/">http://169.254.169.254/latest/meta-data/iam/security-credentials/cg-ec2-role-cgidmxg5qsmw9b/</a></p>
 </li>
 <li>
-<p>Copy the entire response (including the enclosing { } ) to a file called "/home/sec522/.sawssecret". You can do this either with the terminal or with Visual Studio Code.</p>
+<p>Copy the entire response (including the enclosing { } ) to a file called "/home/student/.sawssecret". You can do this either with the terminal or with Visual Studio Code.</p>
 </li>
 <li>
-<p>Open a terminal and run "s-aws" to gain access to the storage repository. "s-aws" reads credentials from the /home/sec522/.sawssecret file.</p>
+<p>Open a terminal and run "s-aws" to gain access to the storage repository. "s-aws" reads credentials from the /home/student/.sawssecret file.</p>
 </li>
 </ol>
 <hr />
