--- a/exercises/4.3/index.html
+++ b/exercises/4.3/index.html
@@ -942,7 +942,7 @@
 </details>
 </li>
 <li>
-<p>Go to the hidden endpoint (<a href="http://juiceshop:3000/#/[solution">http://juiceshop:3000/#/[solution</a> from step 4]).</p>
+<p>Go to the hidden endpoint (<a href="http://juiceshop:3000/#/">http://juiceshop:3000/#/</a> [solution from step 4]).</p>
 <div class="admonition information">
 <p class="admonition-title">Information</p>
 <p>Despite the effort from the developer to obfuscate the "key" in the JavaScript code, the code is reversible with some level of coding skills. Lessons learned - do not hide keys in obfuscation.</p>
