--- a/exercises/2.3/index.html
+++ b/exercises/2.3/index.html
@@ -1033,10 +1033,14 @@
 </ol>
 <hr />
 <h2 id="conclusion">Conclusion</h2>
+<ul>
+<li>There are multiple variants of the XSS attacks. </li>
+<li>XSS is intended to confuse the browser into interrupting certain attacker controlled Web content as instructions coming from the Web server. The end result isn't the "server" being hacked but some attacker controlled content are executed by the browser.</li>
+</ul>
 <hr />
 <h2 id="explore-further">Explore Further</h2>
 <ul>
-<li></li>
+<li>Can you find other flaws in the Juice Shop application?</li>
 </ul>
                 
               
