--- a/exercises/3.1/index.html
+++ b/exercises/3.1/index.html
@@ -1102,10 +1102,14 @@
 </ol>
 <hr />
 <h2 id="conclusion">Conclusion</h2>
+<ul>
+<li>There are various ways to authenticate users and some are more secure than others</li>
+<li>Authentication needs to be based on 1. something you know 2. something you have 3. something you are; or a combination of those three things. Authentication would be insecure if the data it is relied upon can easily be forged.</li>
+</ul>
 <hr />
 <h2 id="explore-further">Explore Further</h2>
 <ul>
-<li></li>
+<li>Explore <a href="https://webauthn.me/debugger">https://webauthn.me/debugger</a> for WebAuthn and Fido2</li>
 </ul>
                 
               
