--- a/resources/preparation/index.html
+++ b/resources/preparation/index.html
@@ -787,17 +787,17 @@
 </style>
 
 <h1 id="preparing-the-virtual-machine">Preparing the Virtual Machine</h1>
-<p>The exercises for this course use a virtual machine. In order to install the virtual machine, you will need to copy the "<strong>SEC522VM</strong>" directory from the provided USB drive to your system. This directory is large (about 20GB) and copying will take a while. Make sure you have enough free space on your hard disk. You will need about 40GB for this course to work well.</p>
+<p>The exercises for this course use a virtual machine. In order to install the virtual machine, you will need to copy the "<strong>SEC522VM</strong>" directory from the provided USB drive to your system. This directory is large (about 7GB) and copying will take a while. Make sure you have enough free space on your hard disk. You will need about 15GB for this course to work well.</p>
 <p>It does not matter where you place this directory; however, we recommend placing it on the desktop to make it easy to find later.</p>
 <p><strong>Please unplug the USB drive after you have copied the files</strong>. Your USB drive can be used to restore the virtual machine in case something goes wrong later.</p>
 <p>IMPORTANT: We avoid the use of what is commonly referred to as "Hacking Tools" or "Malware". However, some of the tools that we do use may not be allowed by your organization's policy. Please refer to your organization's policy before using these tools outside of class. During our testing, the virtual machine files did not trigger anti-malware software. However, this can change at any time due to ongoing signature updates. You may need to disable anti-malware to allow the virtual machine to function.</p>
 <p>No network connectivity is required for class. All exercises are self-contained within the virtual machine.</p>
 <ol>
 <li>
-<p>Copy the "<strong>SEC522VM"</strong> directory from the USB drive to your Desktop.</p>
+<p>Unzip the <strong>SEC522VM.zip</strong> to your Desktop. </p>
 </li>
 <li>
-<p>Inside the "<strong>SEC522VM</strong>" directory, double-click <strong>ClickHere.vmx</strong>. The virtual machine will start and automatically log you in. You may not see the .vmx extension if you configured Windows not to show extensions.</p>
+<p>Inside the "<strong>SEC522VM</strong>" directory (on the desktop), double-click <strong>clickhere.vmx</strong>. The virtual machine will start and automatically log you in. You may not see the .vmx extension if you configured Windows not to show extensions.</p>
 </li>
 <li>
 <p>Click "Power on this Virtual Machine".</p>
