--- a/resources/preparation/index.html
+++ b/resources/preparation/index.html
@@ -802,7 +802,7 @@
 <li>
 <p>Click "Power on this Virtual Machine".</p>
 <div class="admonition danger">
-<p class="admonition-title"><strong>! DO NOT APPLY ANY UPDATES !</strong></p>
+<p class="admonition-title"><strong>! DO NOT APPLY ANY UPDATES/UPGRADE !</strong></p>
 </div>
 </li>
 <li>
