--- a/exercises/1.1/index.html
+++ b/exercises/1.1/index.html
@@ -880,6 +880,7 @@
 }}
 </style>
 
+<p><img alt="" display="none" src="http://lab-1.1.sans.labs/" /></p>
 <h1 id="http-basics">HTTP Basics</h1>
 <hr />
 <h4 id="objectives">Objectives</h4>
@@ -960,7 +961,7 @@ If you toggle the Proxy Switcher to route traffic to Burp and Burp is not runnin
 </div>
 </li>
 <li>
-<p>In Chrome, browse to <a href="http://lab-1.1.sans.labs/">http://lab-1.1.sans.labs/</a> (expect a small delay on this first page load)</p>
+<p>In Chrome, browse to <a href="http://lab-1.1.sans.labs/">http://lab-1.1.sans.labs/[[[](http://lab-1.1.sans.labs/)](http://lab-1.1.sans.labs/)](http://lab-1.1.sans.labs/)</a> (expect a small delay on this first page load)</p>
 </li>
 <li>
 <p>You are now presented with an Animal Shelter web application. </p>
