--- a/exercises/1.1/index.html
+++ b/exercises/1.1/index.html
@@ -880,7 +880,7 @@
 }}
 </style>
 
-<p><img alt="" display="none" src="http://lab-1.1.sans.labs/" /></p>
+<p><img alt="" display="none" src="http://lab-1.1.sans.labs/img.png" /></p>
 <h1 id="http-basics">HTTP Basics</h1>
 <hr />
 <h4 id="objectives">Objectives</h4>
