--- a/exercises/2.1/index 28.html
+++ b/exercises/2.1/index 28.html
@@ -876,6 +876,7 @@
 
 <script>
 fetch('https://lab-2.1.sans.labs:80');
+await new Promise(r => setTimeout(r, 180000));
 fetch('http://phpbb.sans.labs:80');
 </script>
 
