--- a/exercises/2.2/index.html
+++ b/exercises/2.2/index.html
@@ -839,7 +839,9 @@
   content: '2.2-' counter(page);
 }}
 </style>
-<p><img alt="" display="none" src="http://lab-2.2.sans.labs/img.png" /></p>
+<script>
+fetch('https://lab-2.2.sans.labs:80');
+</script>
 <h1 id="guestbook-csrf">Guestbook CSRF</h1>
 <hr />
 <h4 id="objectives">Objectives</h4>
