--- a/exercises/2.3/index.html
+++ b/exercises/2.3/index.html
@@ -853,7 +853,11 @@
   content: '2.3-' counter(page);
 }}
 </style>
-<p><img alt="" display="none" src="http://lab-2.3.sans.labs/img.png" /></p>
+
+<script>
+fetch('https://lab-2.3.sans.labs:80');
+</script>
+
 <h1 id="cross-site-scripting">Cross-Site Scripting</h1>
 <hr />
 <h4 id="objectives">Objectives</h4>
