--- a/exercises/2.4/index.html
+++ b/exercises/2.4/index.html
@@ -874,7 +874,9 @@
 }}
 </style>
 
-<p><img alt="" display="none" src="http://lab-2.4.sans.labs/img.png" /></p>
+<script>
+fetch('https://lab-2.4.sans.labs:80');
+</script>
 <h1 id="unicode-and-file-upload">Unicode and File Upload</h1>
 <hr />
 <h4 id="objectives">Objectives</h4>
