--- a/exercises/3.2/index.html
+++ b/exercises/3.2/index.html
@@ -874,6 +874,10 @@
 }}
 </style>
 
+<script>
+fetch('https://lab-3.2.sans.labs:80');
+</script>
+
 <h1 id="session-fixation-and-session-breaking">Session Fixation and Session Breaking</h1>
 <hr />
 <h4 id="objectives">Objectives</h4>
