--- a/exercises/3.3/index.html
+++ b/exercises/3.3/index.html
@@ -874,6 +874,10 @@
 }}
 </style>
 
+<script>
+fetch('https://lab-3.3.sans.labs:80');
+</script>
+
 <h1 id="oauth-and-access-control">OAuth and Access Control</h1>
 <hr />
 <h4 id="objectives">Objectives</h4>
