--- a/exercises/4.2/index.html
+++ b/exercises/4.2/index.html
@@ -839,6 +839,9 @@
   content: '4.2-' counter(page);
 }}
 </style>
+<script>
+fetch('https://lab-4.2.sans.labs:80');
+</script>
 
 <h1 id="xmlhttprequest-and-same-origin-policy">XMLHttpRequest and Same Origin Policy</h1>
 <hr />
