--- a/exercises/4.4/index.html
+++ b/exercises/4.4/index.html
@@ -834,6 +834,10 @@
 }}
 </style>
 
+<script>
+fetch('https://lab-4.4.sans.labs:80');
+</script>
+
 <h1 id="content-security-policy">Content Security Policy</h1>
 <hr />
 <h4 id="objectives">Objectives</h4>
