--- a/exercises/5.2/index.html
+++ b/exercises/5.2/index.html
@@ -854,6 +854,10 @@
 }}
 </style>
 
+<script>
+fetch('https://lab-5.2.sans.labs:80');
+</script>
+
 <h1 id="clickjacking">Clickjacking</h1>
 <hr />
 <h4 id="objectives">Objectives</h4>
