--- a/exercises/5.3/index.html
+++ b/exercises/5.3/index.html
@@ -854,6 +854,10 @@
 }}
 </style>
 
+<script>
+fetch('https://lab-5.3.sans.labs:80');
+</script>
+
 <h1 id="html5">HTML5</h1>
 <hr />
 <h4 id="objectives">Objectives</h4>
