--- a/exercises/5.5/index.html
+++ b/exercises/5.5/index.html
@@ -841,6 +841,10 @@
 }}
 </style>
 
+<script>
+fetch('https://lab-5.5.sans.labs:80');
+</script>
+
 <h1 id="logging-and-incident-response">Logging and Incident Response</h1>
 <hr />
 <h4 id="objectives">Objectives</h4>
