--- a/exercises/4.1/index.html
+++ b/exercises/4.1/index.html
@@ -834,6 +834,10 @@
 }}
 </style>
 
+<script>
+fetch('https://lab-4.1.sans.labs:80');
+</script>
+
 <h1 id="wsdl-enumeration-and-parameter-tampering">WSDL Enumeration and Parameter Tampering</h1>
 <hr />
 <h4 id="objectives">Objectives</h4>
