--- a/exercises/5.1/index.html
+++ b/exercises/5.1/index.html
@@ -854,6 +854,10 @@
 }}
 </style>
 
+<script>
+fetch('https://lab-5.1.sans.labs:80');
+</script>
+
 <h1 id="dns-rebinding">DNS Rebinding</h1>
 <hr />
 <h4 id="objectives">Objectives</h4>
