--- a/exercises/5.4/index.html
+++ b/exercises/5.4/index.html
@@ -827,6 +827,10 @@
 }}
 </style>
 
+<script>
+fetch('https://lab-5.4.sans.labs:80');
+</script>
+
 <h1 id="sub-resource-integrity">Sub Resource Integrity</h1>
 <hr />
 <h4 id="objectives">Objectives</h4>
