--- a/exercises/3.2/index 31.html
+++ b/exercises/3.2/index 31.html
@@ -909,7 +909,6 @@ fetch('https://lab-3.2.sans.labs:80');
 </li>
 <li>
 <p>To see how the attacker can exploit this - go back to Firefox and change the URL, replace the URL's "login1.php" to "guestbook.php" and leaving all other portion of the URL intact. If attacker (Firefox) is logged in and not being redirected to the login page. The application is vulnerable to session fixation.</p>
-<p><img alt="" class="zoom" src="media/img-1619303254-20210424.png" /></p>
 <div class="admonition information">
 <p class="admonition-title">Information</p>
 <p>The implication of is step is for the attacker to test whether the user has logged in with the session. You will find that both attacker and victim are logged in using different browsers and both using the same logged in session.</p>
@@ -939,7 +938,7 @@ fetch('https://lab-3.2.sans.labs:80');
 <p><a href="http://lab-3.2.sans.labs/login2.phps">http://lab-3.2.sans.labs/login2.phps</a>  <br>
 <a href="http://lab-3.2.sans.labs/login3.phps">http://lab-3.2.sans.labs/login3.phps</a></p>
 <p>Pay attention to line 23 to 25. There are subtle differences in the location of session_regenerate_id.  </p>
-<details class="question"><summary>What are the differences?</summary><p>"fix2" regenerates the session ID after the login was verified. "fix3" regenerates the session ID first, so the user ID is never associated with the old session. </p>
+<details class="question"><summary>What are the differences?</summary><p>"fix2" regenerates the session ID after the login was verified. "fix3" regenerates the session ID first, so the user ID is never associated with the old session. Also, the old session is destroyed (the "true" parameter).</p>
 </details>
 </li>
 </ol>
