--- a/exercises/5.2/index.html
+++ b/exercises/5.2/index.html
@@ -963,7 +963,7 @@ fetch('http://lab-5.2.sans.labs:80');
 <p>Now that you are logged into the application. You see that there are messages posted by multiple users. Let's inspect how this application work. Please toggle the <strong>Proxy Switcher</strong> to manual proxy mode (it should be red), which means all browser traffic are sent to Burp for inspection.</p>
 </li>
 <li>
-<p>Switch over to Burp. You should see a request awaiting approval to forward. Under <strong>Proxy</strong> tab, select <strong>Intercept</strong> and click forward for the requests. Review the POST request to /graphql, take a look at the request body for the content in JSON format.</p>
+<p>Switch over to Burp. Under <strong>Proxy</strong> tab, select <strong>Intercept</strong> and click forward for the requests. Review the POST request to /graphql, take a look at the request body for the content in JSON format.</p>
 </li>
 <li>
 <p>In Burp window, under <strong>Proxy</strong> tab, select the <strong>HTTP history</strong> which will show you the HTTP requests that were intercepted by Burp. Scroll all the way down and you should find the request and response for the POST request to /graphql. See screen shot for reference. 
