--- a/exercises/3.1/index.html
+++ b/exercises/3.1/index.html
@@ -1228,7 +1228,7 @@
 <p>Click the "Clear §" button. This will clear the auto-selected payload positions.</p>
 </li>
 <li>
-<p>Highlight the digit after <strong>donation=</strong>, and click the "Add §" button. This will mark the digits for brute forcing. Also, verify the User-Agent ("DOGBrowser") and make sure the "Browser=wrong" cookie is removed.</p>
+<p>Highlight the digit after <strong>donationid=</strong>, and click the "Add §" button. This will mark the digits for brute forcing. Also, verify the User-Agent ("DOGBrowser") and make sure the "Browser=wrong" cookie is removed.</p>
 <p><img alt="" class="zoom" src="media/img-1615962113-20210317.png" /></p>
 <p><strong>Marking Position for Intruder</strong></p>
 </li>
