--- a/exercises/5.1/index.html
+++ b/exercises/5.1/index.html
@@ -1093,9 +1093,15 @@ fetch('https://lab-5.13.sans.labs:80');
 <p>After about 100 seconds, the Chrome browser will lift the DNS pin and the JavaScript detects this and send the attack to the alternative host.</p>
 </li>
 <li>
-<p>Now find out where in eviljs.php to insert a request for "<a href="http://lab-5.1-evil.sans.lab/flag.php">http://lab-5.1-evil.sans.lab/flag.php</a>" (the file can be found at /etc/docker/compose/5.1/web/html/eviljs.php )</p>
+<p>Now find out where in eviljs.php to insert a request for "<a href="http://lab-5.1-evil.sans.labs/flag.php">http://lab-5.1-evil.sans.labs/flag.php</a>" (the file can be found at /etc/docker/compose/5.1/web/html/eviljs.php )</p>
 </li>
 </ol>
+<div class="admonition tip">
+<p class="admonition-title">Free hint</p>
+<ul>
+<li>The answer to the NetWars challenge should be a combination of English words (no spaces)</li>
+</ul>
+</div>
 <h2 id="part-2_1">Part 2:</h2>
 <ol>
 <li>
