--- a/exercises/5.2/index.html
+++ b/exercises/5.2/index.html
@@ -974,7 +974,7 @@ fetch('http://lab-5.2.sans.labs:80');
 <p><img alt="" class="zoom" src="images/img-1633556082-20211006.png" /></p>
 </li>
 <li>
-<p>In the tab, select <strong>BApp Store</strong> to install the InQL extension. There is search box on the upper right hand to help you find the InQL extension in the list. Once you find the <strong>InQL - Introspection GraphQL Scanner</strong>, click on it and you will get the option to install it at the right side pane (scroll down on the page to see the Install button in orange).</p>
+<p>In the tab, select <strong>BApp Store</strong> to install the InQL extension. There is search box on the upper right hand to help you find the InQL extension in the list. Once you find the <strong>InQL - Introspection GraphQL Scanner</strong>, click on it and you will get the option to install it at the right side pane (scroll down on the page to see the Install button in orange). Install InQL by clicking on the <strong>Install</strong> button.</p>
 </li>
 <li>
 <p>Once the installation if finished, there will be more tabs available (such as InQL Scanner). Go to the <strong>Proxy tab</strong> to select <strong>HTTP History</strong>, we are once again looking for the POST request to the /graphql (scroll down on the list). Once you find the request in the history, right click on it. In the context menu, select <strong>Copy URL</strong>. </p>
@@ -984,7 +984,7 @@ fetch('http://lab-5.2.sans.labs:80');
 </li>
 </ol>
 <hr />
-<p>For second NetWar challenge, you will need to generate multiple queries to the GraphQL endpoint. </p>
+<p>For second NetWars challenge, you will need to generate multiple queries to the GraphQL endpoint. </p>
 <ol>
 <li>
 <p>In Chrome, browse to <strong><a href="http://lab-5.2.sans.labs/settings">http://lab-5.2.sans.labs/settings</a></strong> Since Burp is in interception mode, you will need to change to Burp to click <strong>Forward</strong> (multiple times) under the <strong>Proxy -&gt; Intercept</strong> tab.</p>
