--- a/exercises/1.2/index.html
+++ b/exercises/1.2/index.html
@@ -1225,7 +1225,7 @@ Content-Type: text/html; charset=UTF-8
 <hr />
 <h2 id="explore-further">Explore Further</h2>
 <ul>
-<li>Can you use HTTP 2 over cleartext?</li>
+<li>Can HTTP/2  be used over cleartext?</li>
 </ul>
                 
                   
