--- a/exercises/2.4/index.html
+++ b/exercises/2.4/index.html
@@ -1248,6 +1248,9 @@ fetch('https://lab-2.4.sans.labs:80');
 <h2 id="explore-further">Explore Further</h2>
 <ul>
 <li></li>
+<li>
+<p>Take a look at major social networks and see how they handle your profile picture upload</p>
+</li>
 </ul>
                 
                   
