--- a/exercises/5.2/index.html
+++ b/exercises/5.2/index.html
@@ -951,7 +951,7 @@ fetch('http://lab-5.2.sans.labs:80');
 <p>Now that you are logged into the application. You see that there are messages posted by multiple users. Let's inspect how this application work. Please toggle the <strong>Proxy Switcher</strong> to manual proxy mode (it should be red), which means all browser traffic are sent to Burp for inspection.</p>
 </li>
 <li>
-<p>Switch over to Burp. Under <strong>Proxy</strong> tab, select <strong>Intercept</strong> and click forward for the requests. Review the POST request to /graphql, take a look at the request body for the content in JSON format.</p>
+<p>Switch over to Burp. Under <strong>Proxy</strong> tab, select <strong>Intercept</strong> and click forward for all the pending requests. Review the POST request to /graphql, take a look at the request body for the content in JSON format.</p>
 </li>
 <li>
 <p>In Burp window, under <strong>Proxy</strong> tab, select the <strong>HTTP history</strong> which will show you the HTTP requests that were intercepted by Burp. Scroll all the way down and you should find the request and response for the POST request to /graphql. See screen shot for reference. 
@@ -968,7 +968,7 @@ fetch('http://lab-5.2.sans.labs:80');
 <p>Once the installation if finished, there will be more tabs available (such as InQL Scanner). Go to the <strong>Proxy tab</strong> to select <strong>HTTP History</strong>, we are once again looking for the POST request to the /graphql (scroll down on the list). Once you find the request in the history, right click on it. In the context menu, select <strong>Copy URL</strong>. </p>
 </li>
 <li>
-<p>Change over to the <strong>InQL Scanner</strong> tab. Paste the URL at the top of the window and then click on <strong>Load</strong> at the right hand side. A request is generated that you will need to click <strong>Forward</strong> under the <strong>Proxy -&gt; Intercept</strong> tab. Once done, flip back to <strong>InQL Scanner</strong>. Some data are appearing at the pane to the bottom. InQL is using introspection queries to determine all the queries supported at this GraphQL endpoint. This should help you answer the first challenge in NetWars. </p>
+<p>Change over to the <strong>InQL Scanner</strong> tab. Paste (Ctrl-V) the URL at the top of the window and then click on <strong>Load</strong> at the right hand side. A request is generated that you will need to click <strong>Forward</strong> under the <strong>Proxy -&gt; Intercept</strong> tab. Once done, flip back to <strong>InQL Scanner</strong>. Some data are appearing at the pane to the bottom. InQL is using introspection queries to determine all the queries supported at this GraphQL endpoint. This should help you answer the first challenge in NetWars. </p>
 </li>
 </ol>
 <hr />
@@ -986,14 +986,17 @@ fetch('http://lab-5.2.sans.labs:80');
 </li>
 <li>
 <p>At this point, the pane should be just the GraphQL query for edit and send. This should help with the NetWars challenge. Feel free to take hints in NetWars if necessary.</p>
-</li>
-</ol>
 <div class="admonition tip">
 <p class="admonition-title">Free hint</p>
 <ul>
 <li>Pay attention to user: 1 </li>
 </ul>
 </div>
+</li>
+<li>
+<p>We are finished with intercepting traffic. Ensure that the Chrome is no longer sending traffic through Burp - the ProxySwitcher in Chrome (upper right hand corner of browser window) should be "black" in color.</p>
+</li>
+</ol>
 <hr />
 <h2 id="conclusion">Conclusion</h2>
 <ul>
