--- a/exercises/5.1/index.html
+++ b/exercises/5.1/index.html
@@ -1065,7 +1065,7 @@ fetch('https://lab-5.13.sans.labs:80');
 <hr />
 <h2 id="part-1-dns-rebinding">Part 1: DNS Rebinding</h2>
 <p>In this exercise, we will experiment with DNS rebinding. The attacker prepared a website at <a href="http://lab-5.1-evil.sans.labs/eviljs.php">http://lab-5.1-evil.sans.labs/eviljs.php</a> . Once you visit the site, the DNS entry for lab-5.1-evil.sans.labs will change. The browser will still use the old IP address for a while, but the attacker is using JavaScript to figure out when to launch the attack.</p>
-<p>To answer the Netwars challenge for this question, you will need to alter the attack to send a request (using JavaScript) to "<a href="http://lab-5.1-evil.sans.lab/flag">http://lab-5.1-evil.sans.lab/flag</a>" AFTER DNS changes.</p>
+<p>To answer the Netwars challenge for this question, view "<a href="http://lab-5.1-evil.sans.lab/flag.php">http://lab-5.1-evil.sans.lab/flag.php</a>" in your browser AFTER DNS changes.</p>
 <h3 id="step-by-step">Step by Step</h3>
 <ol>
 <li>
