--- a/exercises/5.3/index.html
+++ b/exercises/5.3/index.html
@@ -1133,8 +1133,8 @@ This script may take a few minutes to build and start.</p>
 <p>Paste the content in the input box below. Then click <strong>Continue</strong> at the bottom. In the next screen, click on the orange <strong>Import</strong> at the bottom right side of the window.</p>
 </li>
 <li>
-<p>The cURL command (HTTP Request with details) is imported into Postman. Postman is a very versatile HTTP request crafting tool. We will see what it can do for a situation like what we have on hand. Edit the URL on the request to <strong><a href="https://apigw.sans.labs:8442/api/">https://apigw.sans.labs:8442/api/</a></strong> then click <strong>Send</strong>.
-    <img alt="" class="zoom" src="images/img-1633569725-20211006.png" /></p>
+<p>The cURL command (HTTP Request with details) is imported into Postman. Postman is a very versatile HTTP request crafting tool. We will see what it can do for a situation like what we have on hand. Edit the URL on the request to <strong><a href="https://apigw.sans.labs:8442/api/">https://apigw.sans.labs:8442/api/</a></strong> then click <strong>Send</strong>. If Postman complains about TLS issue, select disabling of the SSL verification.</p>
+<p><img alt="" class="zoom" src="images/img-1633569725-20211006.png" /></p>
 <p>The response shows us that this REST based API has multiple operations that can be invoked. The information returned by these operations is the subject of the NetWars challenge. You may execute these operations by adding the respective name of the operation to the URL.</p>
 </li>
 </ol>
