--- a/exercises/5.1/index.html
+++ b/exercises/5.1/index.html
@@ -1035,8 +1035,8 @@
                 <script>
 fetch('https://lab-5.1.sans.labs:80');
 fetch('https://lab-5.11.sans.labs:80');
-fetch('https://lab-5.12.sans.labs:80');
-fetch('https://lab-5.13.sans.labs:80');
+fetch('http://lab-5.1-deserial.sans.labs:80');
+fetch('http://lab-5.1-evil.sans.labs:80');
 </script>
 
 <h1 id="exercise-51-deserialization-and-dns-rebinding">Exercise 5.1 - Deserialization and DNS Rebinding</h1>
