--- a/exercises/5.1/index.html
+++ b/exercises/5.1/index.html
@@ -1201,7 +1201,7 @@ Available payload types:
 <p>In this part, we will learn about the fixing of the deserialization vulnerability.</p>
 <ol>
 <li>
-<p>In Burp, go to the Repeater tab where we already setup the template for sending the exploit payload over Cookie header to the server. Please change both the <strong>Host:</strong> header in the left pane and also the <strong>Target</strong> on the upper right hand corner. See below screen cap on where you need to change the values. For both, the host name that we are targeting is <strong>lab-5.1-fixedserial.sans.labs</strong> This is a fixed, no longer vulnerable version of the previous target. The code base is the same except the vulnerability has been fixed.</p>
+<p>In Burp, go to the Repeater tab where we already setup the template for sending the exploit payload over Cookie header to the server. Please change both the <strong>Host:</strong> header in the left pane and also the <strong>Target</strong> on the upper right hand corner. See below screen cap on where you need to change the values. For both, the host name that we are targeting is <strong>lab-5.1-fixdserial.sans.labs</strong> This is a fixed, no longer vulnerable version of the previous target. The code base is the same except the vulnerability has been fixed.</p>
 <p><img alt="" class="zoom" src="images/img-1633223794-20211002.png" /></p>
 </li>
 <li>
